bug(waybar): strip whitespace, prepare for standardization

--- a/packages/themes/balcony/waybar/style.css
+++ b/packages/themes/balcony/waybar/style.css
@@ -2,7 +2,7 @@
   all: unset;
   /* `otf-font-awesome` is required to be installed for icons */
   font-family: Material Design Icons, JetBrainsMono Nerd Font, Iosevka Nerd Font;
-  font-size: 19px;
+  font-size: 16px;
 }
 
 window#waybar {
